# consolidation-finance

./: .gitignore  AGENTS.md  CLAUDE.md  EXPRESSION_DE_BESOIN.md  README.md  opencode.json
.opencode/: opencode.jsonc  opencode.jsonc.example
docs/: ANALYSE_RECLASSIFICATION_CONVERSION.md  A_NOUVEAU.md  A_NOUVEAU_IMPL.md  CAS_CONSO_TEST.md  CONTROLES_DONNEES.md  ETAT_AVANCEMENT.md  FLOW_SCHEME_EXPLICITE.md  FLUX_CONSO.md  FORMULES.md  MCP.md  MODELE_DONNEES.md  PLAN_MIGRATION_CSV_JSON.md  PLAN_RENOMMAGE_CODES.md  QUESTIONS_OUVERTES.md  README.md  RECETTE_PYTHON.md  REFACTOR_CONSO_RESTE_A_FAIRE.md  REGLES_CONSO.md  REVUE_DYNAMISME.md  SPEC_SCENARIO_V2.md  SPEC_SCENARIO_V2_TECH.md  TECHNIQUE.md
docs/archive/analyses/: ANALYSE_RECLASSIFICATION_CONVERSION.md
docs/archive/specs-livrees/: A_NOUVEAU_IMPL.md  PLAN_Q54_API_MCP.md  PLAN_RENOMMAGE_CODES.md  SPEC_SCENARIO_V2.md  SPEC_SCENARIO_V2_TECH.md
prototype/python/: .gitignore  README.md  run.py
prototype/python/conso/: __init__.py  loader.py  pipeline.py  report.py  schema.py  seed.py  validate.py
prototype/python/data/: accounts.csv  entries.csv  perimeter.csv
prototype/rust/: .gitignore  Cargo.toml  README.md  SPEC_PROPAGATION.md  SPEC_REGISTRY.md  SPEC_RULES.md  build.rs  dump_pipeline.csv  golden_test.py  rules_test.py  smoke_test.py
prototype/rust/.cargo/: config.toml
prototype/rust/data/: account_parents.csv  accounts.csv  consolidations.csv  currencies.csv  entities.csv  entries.csv  flow_scheme_items.csv  flow_schemes.csv  flows.csv  methods.csv  natures.csv  perimeter.csv  perimeter_sets.csv  periods.csv  rates.csv  scenarios.csv  sous_classes.csv  variants.csv
prototype/rust/data/smoke/: README.md
prototype/rust/data/smoke/conv_integ/: accounts.csv  consolidations.csv  entities.csv  entries.csv  expected.md  methods.csv  natures.csv  perimeter.csv  perimeter_sets.csv  rate_sets.csv  rates.csv  scenarios.csv
prototype/rust/data/smoke/interco/: README_rules.md  app_config.csv  consolidations.csv  currencies.csv  entities.csv  entries.csv  expected.md  flow_scheme_items.csv  flow_schemes.csv  flows.csv  perimeter.csv  perimeter_sets.csv  periods.csv  rate_sets.csv  rates.csv  rule_R-INT.json  scenario_categories.csv  scenarios.csv  sous_classes.csv
prototype/rust/data_golden/: accounts.csv  consolidations.csv  entities.csv  entries.csv  flows.csv  natures.csv  perimeter.csv  rate_sets.csv  rates.csv  scenarios.csv  sous_classes.csv
prototype/rust/src/: characteristics.rs  coefficients.rs  controls.rs  custom_references.rs  dimensions.rs  entries.rs  export.rs  formula.rs  import.rs  indicators.rs  json_migration.rs  lib.rs  loader.rs  main.rs  masterdata.rs  mcp.rs  money.rs  references.rs  report.rs  reports.rs  resolve.rs  rules.rs  schema.rs  seed.rs  state.rs  surrogate.rs  validate.rs  value_lists.rs
prototype/rust/src/pipeline/: a_nouveau.rs  aggregate.rs  consolidate.rs  convert.rs  materialize_closures.rs  materialize_f99.rs  mod.rs  reclassify.rs  staging.rs
prototype/rust/tests/: a_nouveau.rs  convert.rs  golden.rs  interco_golden.rs  loader.rs  mcp_smoke.ps1  pipeline.rs  rules.rs
prototype/rust/tests/fixtures/: seed.json
prototype/rust/tests/snapshots/: fact_entry_seed.tsv
simulations/: consolidation_sim.py
web/: REFACTO_UI.md  SPEC_UI_RULES.md  eslint.config.js  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  api.ts  index.css  types.ts
web/src/components/: ConditionFields.tsx  DimRefProvider.tsx  FieldInput.tsx  Filters.tsx  FormulaEditor.tsx  HealthBadge.tsx  Layout.tsx  LibraryList.tsx  MasterDetailEditor.tsx  OperandPalette.tsx  PageHeader.tsx  RenameModal.tsx  SubTabs.tsx  masterFields.tsx  operators.ts
web/src/config/: masterDetailConfigs.ts
web/src/hooks/: useCrudResource.ts  useDimValues.tsx  useDimensionMetadata.ts  useHealth.ts  useTheme.ts
web/src/pages/: BilanPage.tsx  CaracteristiquesPage.tsx  CoefficientsPage.tsx  CompteResultatPage.tsx  ControlsPage.tsx  DimensionsPage.tsx  EcrituresPage.tsx  ExecutionPage.tsx  HelpPage.tsx  ImportPage.tsx  IndicatorsPage.tsx  MaintenancePage.tsx  MasterDataPage.tsx  MasterDetailPage.tsx  PipelinePage.tsx  RapportsPage.tsx  RulesPage.tsx  SaisiePage.tsx  SchemasJeuxPage.tsx
web/src/utils/: conditionValue.ts  (+6 more)
