[package]
name = "conso-engine"
version = "0.1.0"
edition = "2021"
description = "Moteur de consolidation financière par les flux (portage Rust du prototype Python)"
publish = false

[lib]
name = "conso_engine"
path = "src/lib.rs"

[[bin]]
name = "conso-server"
path = "src/bin/server.rs"

[[bin]]
name = "conso-bench"
path = "src/bin/bench.rs"

[dependencies]
# DuckDB embarqué — feature "bundled" pour compiler DuckDB en C++ depuis les
# sources (pas de dépendance système). La compilation est lourde (compile tout
# le moteur C++ de DuckDB) mais garantit un binaire autonome sur ARM64.
duckdb = { version = "1.1", features = ["bundled"] }
# Arithmétique décimale exacte pour les montants (pas de f64 en finance).
# `serde-float` : sérialisation JSON en nombre (le frontend TS attend `number`).
# `macros` : macro `dec!(10000)` pour les constantes du seed.
rust_decimal = { version = "1", features = ["serde-float", "macros"] }
# Serveur web (binaire conso-server) — expose le moteur via une API REST JSON.
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
# SDK MCP officiel (Q54) — sert le moteur comme outils typés pour les agents IA
# via le mode `conso-server --mcp` (transport stdio). `transport-io` = stdio
# serveur, `schemars` = génération du JSON Schema des paramètres d'outils.
rmcp = { version = "2", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
# http-body-util : utilisé par le handler MCP /mcp (collect du body de réponse).
http-body-util = "0.1"
# schemars : génération du JSON Schema des paramètres d'outils MCP (le derive
# `JsonSchema` référence le crate directement). Version alignée sur rmcp 2.
schemars = "1"

[profile.release]
# Optimisations pour le calcul analytique (GROUP BY / JOIN volumineux).
opt-level = 3
lto = "thin"
codegen-units = 1
